--- a/twitter-frontend/src/index.css
+++ b/twitter-frontend/src/index.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=Fira+Sans:400,500,600,700,800');
-
-* {
+*{
   box-sizing: border-box;
 }
+
 body {
   background: #1C8EF9 !important;
   min-height: 100vh;
@@ -21,20 +21,15 @@ body, html, .App, #root, .auth-wrapper {
   height: 100%;
 }
 
-.navbar-light {
-  background-color: #ffffff;
-  box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.2);
-}
-
 .auth-wrapper {
-  display: flex;
+  margin-top: 70px;
   justify-content: center;
   flex-direction: column;
   text-align: left;
 }
 
 .auth-inner {
-  width: 450px;
+  width: 700px;
   margin: auto;
   background: #ffffff;
   box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.2);
@@ -44,7 +39,6 @@ body, html, .App, #root, .auth-wrapper {
 }
 
 .auth-wrapper .form-control:focus {
-  border-color: #167bff;
   box-shadow: none;
 }
 
